# nl2120-soilmm

./: README.md  pyproject.toml
nl2120_soilmm/: constants.py  correlation.py  layer_analysis.py  levelling_correction.py  read.py  reference_date_correction.py  stats.py  stats_regiodeal.py  write.py
nl2120_soilmm/extra_scripts/: plot_anchor_groundwater_correlation.py  plot_groundwater_wells_correlation.py  plot_thickness_groundwater_correlation.py  plot_thickness_weather_correlation_single.py
nl2120_soilmm/old_scripts/: plot_soil_profiles.py  plot_soil_profiles_old.py  stats.py
nl2120_soilmm/preprocessing/: extensometers.py  filter_depths.py  gwlevel.py  precipitation_deficit.py  surface_levels.py
nl2120_soilmm/visualisation/: plot_bar_subsidence_layers.py  plot_bar_subsidence_layers_per_location.py  plot_rek.py  plot_soil_movement.py  plot_soil_movement_Nederlands.py  plot_soil_movement_SUB_excursion_2025.py  plot_soil_movement_regiodeal.py  plot_soil_movement_restveengebied_Nederlands.py  plot_soil_profiles.py  plot_soil_profiles_regiodeal.py  plot_soil_profiles_single.py
