[project]
authors = [{name = "jreusen", email = "25225054+JesseReusen@users.noreply.github.com"}]
dependencies = []
name = "nl2120-soilmm"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
nl2120_soilmm = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.3.3,<3"
matplotlib = ">=3.10.8,<4"
scipy = ">=1.16.3,<2"
cmocean = ">=4.0.3,<5"
openpyxl = ">=3.1.5,<4"
